# aura-engine

./: .gitignore  README.md  pyproject.toml
db/: migrate.py
docs/: ASCENDANT.md  CHART.md  COMPATIBILITY.md  CONTENT_KEYS.md  MUHURAT.md  REPORTS.md
engine/: __init__.py  __main__.py  chart.py  choghadiya.py  compatibility.py  content.py  daily.py  ephemeris.py  muhurat.py  panchang.py  positions.py  reports.py  scoring.py  timezones.py  transits.py  vimshottari.py
scripts/: compare.py  crossval_ascendant.py  crossval_chart.py  crossval_compatibility.py  crossval_compatibility_worker.py  crossval_dasha.py  crossval_muhurat.py  crossval_natal.py  crossval_natal_zone.py  crossval_report.py  crossval_scores.py  crossval_transit.py  crossval_window.py  measure_a5_scores.py  measure_gochara_daily.py  measure_muhurat.py  parse_golden.py  sensitivity_ascendant.py
tests/: conftest.py  test_active_version_coherence.py  test_area_outlook_verdict.py  test_ascendant_scores.py  test_chart.py  test_choghadiya_intl.py  test_compatibility.py  test_compatibility_gates_falsify.py  test_content_diversity.py  test_dasha_content_seed.py  test_identity_content_seed.py  test_identity_gates_falsify.py  test_muhurat.py  test_muhurat_gates_falsify.py  test_panchang.py  test_per_day_distinctness.py  test_positions.py  test_precompute.py  test_report_composition.py  test_report_content_seed.py  test_report_cross_kind.py  test_report_gates_falsify.py  test_report_monthly_composition.py  test_timezones.py  test_transit_composition.py  test_transit_content_seed.py  test_transits.py  (+2 more)
(+46 files in other folders)
