[project]
name = "aura-engine"
version = "0.1.0"
description = "Verifiable Vedic astrology calculation engine (Swiss Ephemeris) for Aura"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "pyswisseph>=2.10.3.2",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
# The open natal-lookup microservice (engine/jobs/natal_service.py). Optional so
# the core engine + precompute job stay lean; installed only where the service
# is deployed. `uv sync --extra api`.
api = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
